# ai-journal-mcp

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  cspell.config.yaml  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DEVELOPMENT.md  RELEASE.md  ROADMAP.md  SPECIFICATION.md  USE_CASES.md
docs/proposals/: multi-source-consolidation.md
scripts/: README.md  assign_themes.py  lint-docs.sh  setup.sh  verify-setup.sh
scripts/dev/: activate_venv.sh  next_steps.txt  welcome.sh  welcome_message.txt
skills/capture/: SKILL.md
src/ai_journal/: __init__.py  archive.py  cli.py  config.py  consolidate.py  indexer.py  intake.py  migrate.py  model.py  parser.py  server.py  store.py  tasks.py
src/ai_journal_mcp/: __init__.py  cli.py  config.py  discover.py  fsio.py  indexer.py  intake.py  migrate.py  model.py  parser.py  server.py  spec.py  store.py  tasks.py
tests/: conftest.py  test_archive.py  test_cli.py  test_config_and_store.py  test_consolidate.py  test_discover.py  test_edges.py  test_fsio.py  test_indexer_extra.py  test_intake_and_index.py  test_migrate.py  test_parser.py  test_server.py  test_spec.py  test_spec_intake.py  test_tasks.py
tests/fixtures/parser/: README.md  bracketed_timestamp.expected.json  bracketed_timestamp.md  code_fence.expected.json  code_fence.md  date_only.expected.json  date_only.md  index_style.expected.json  index_style.md  invalid_date.expected.json  invalid_date.md  preamble.expected.json  preamble.md  themed_level2.expected.json  themed_level2.md  unicode.expected.json  unicode.md
