[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The project was named `ai-journal` (matching ai-launcher/ai-monitor), but PyPI
# rejected that as too similar to an existing project, so everything — package,
# CLI command, import, repo — is `ai-journal-mcp` / `ai_journal_mcp`.
[project]
name = "ai-journal-mcp"
dynamic = ["version"]  # single bump site: __version__ in src/ai_journal_mcp/__init__.py
description = "Journal engine and MCP server: capture, structure, and ask questions of your work journals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Solent Labs™" }
]
keywords = ["journal", "mcp", "llm", "knowledge-management", "markdown", "full-text-search"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    # upper bound: the SDK moves fast and server.py depends on the
    # mcp.server.fastmcp import path — revisit on the mcp 2.x release
    "mcp>=1.0,<2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "pre-commit>=3.5",
]

[project.scripts]
ai-journal-mcp = "ai_journal_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/solentlabs/ai-journal-mcp"
Issues = "https://github.com/solentlabs/ai-journal-mcp/issues"

[tool.hatch.version]
path = "src/ai_journal_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_journal_mcp"]

[tool.hatch.build.targets.sdist]
# The sdist is for building the package, not a repo snapshot: keep editor
# config, Claude/session files, and doc-lint tooling out of it.
exclude = [
    ".claude",
    ".vscode",
    ".editorconfig",
    ".pre-commit-config.yaml",
    ".markdownlint-cli2.jsonc",
    ".markdownlintignore",
    "cspell.config.yaml",
    "package.json",
    "scripts",
    "skills",
    "Makefile",
    "CLAUDE.md",
]

# ---------------------------------------------------------------------------
# Ruff — single tool for linting AND formatting (SSOT for code style).
# Replaces black + isort + flake8. line-length 120 matches the sibling
# Cable Modem Monitor repo to keep house style consistent across projects.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]
extend-exclude = ["__pycache__", ".venv", "*.db", "*.sqlite3"]

[tool.ruff.lint]
# Style (E/W), Pyflakes (F), import sorting (I), modern-syntax upgrades (UP),
# bugbear (B), simplify (SIM), complexity (C90), naming (N), return clarity
# (RET), and misc improvements (PIE). Calibrated to be useful, not noisy.
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C90", "N", "RET", "PIE"]
ignore = [
    "SIM108",  # don't force ternaries — they hurt readability as often as help
]

[tool.ruff.lint.isort]
known-first-party = ["ai_journal_mcp"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]      # re-exports for the package surface are not "unused"
"tests/**/*.py" = ["E501"]    # long assertion/fixture strings in tests are fine
"scripts/**/*.py" = ["T201"]  # print() is the point in dev scripts

[tool.ruff.format]
# Adopted on a clean (uncommitted) tree so there is no churn against history.
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — type checking. Config lives here (single source), no mypy.ini.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["src", "scripts"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# The MCP SDK ships partial types; don't fail on its internals.
module = ["mcp.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"

# ---------------------------------------------------------------------------
# Coverage — markdown is the source of truth; the .coverage file is disposable.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["ai_journal_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
